--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -188,7 +188,7 @@
 
   <script type="text/javascript">
     // Chosen CSS
-    var config = {
+    let config = {
       ".chosen-select": {},
       ".chosen-select-deselect": {
         allow_single_deselect: true
@@ -214,7 +214,7 @@
 
       // Form validation
       function validateForm() {
-        var isValid = true;
+        let isValid = true;
         $(".form-control").each(function() {
           if ($(this).val() === "") {
             isValid = false;
@@ -233,7 +233,7 @@
       // If all required fields are filled
       if (validateForm()) {
         // Create an object for the user"s data
-        var userData = {
+        let userData = {
           name: $("#name").val(),
           photo: $("#photo").val(),
           scores: [
